--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -87,21 +87,22 @@ Where the app icon is an image of the appropriate size and the app name is an XM
 
 As part of integrating Continuous Delivery(CD) into the development lifecycle, CI is set up to generate an APK.
 
-The configuration requires the tag to:
-* The product name: _opensrp_
+The configuration requires the tag to have the following parts/sections in order:
+* The prefix `v`
 * Followed by the _version_ in the format `[0-9]+.[0-9]+.[0-9]+[0-9a-zA-Z.-]+`
+* The APK flavor as set up in the gradle build configuration : _quest_
 * Followed by an optional _suffix_ depending on the release e.g. `-alpha`, `-rc`, `-beta` e.t.c
 
-The following are all valid tags that will trigger the generation of a release APK
-> - opensrp-1.2.0
-> - opensrp-1.2.0-alpha
-> - opensrp-1.2.0-beta
-> - opensrp-1.2.0-rc1
+The following are all valid tags that will trigger the generation of the Quest release APK
+> - v1.2.0-quest
+> - v1.2.0-quest-alpha
+> - v1.2.0-quest-beta
+> - v1.2.0-quest-rc1
 
-**Note:** e.g. when creating a tag for the _OpenSRP Version 1.2.0_, use the command:
+**Note:** The '-quest' section above specifies the flavor to build. When creating a tag for the _Quest OpenSRP Version 1.2.0 RC 5 release variant_, use the command:
 
 ```
-git tag -a opensrp-1.2.0 -s  && git push origin opensrp-1.2.0
+git tag -a v1.2.0-quest-rc5 -s && git push origin v0.2.1-quest-rc5
 ```
 
 When you run the command, you will be prompted to _add a message_. The message should be of the format:
@@ -115,8 +116,8 @@ When you run the command, you will be prompted to _add a message_. The message s
 ### Deleting a tag
 Sometimes you may want to delete a tag, e.g. if you push an incorrect tag, need to update the tag message etc.
 
-For example, to delete the opensrp-1.2.0 tag run the command:
+For example, to delete the v1.2.0-quest-rc1 tag run the command:
 
 ```
-git push --delete origin opensrp-1.2.0 && git tag --delete opensrp-1.2.0
+git push --delete origin v1.2.0-quest-rc1 && git tag --delete v1.2.0-quest-rc1
 ```
