--- a/docs/developer-setup/publishing-fhir-sdk-artifacts.mdx
+++ b/docs/developer-setup/publishing-fhir-sdk-artifacts.mdx
@@ -51,23 +51,26 @@ Building FHIR Core should now import the new artifact version. MavenLocal is alr
   3. _Checkout_ to `master-release` branch and _merge_ in `master` changes
   4. _Update the versions_ of the various modules you want to publish in the `buildSrc/src/main/kotlin/Releases.kt` file
   5. _Make a commit_ with the updated versions and _add a commit message_ in the format shown in the [Commits section below](#commits)
-  6. Now that the `master-release` branch has all the latest updates, _Check out_ to a new branch on your local e.g. `opensrp-release1`
-  7. Merge in any other the previous unmerged PR branches mentioned in the previous commit message and have not been merged to `master` yet
-  8. _Publish_ the specific modules that you wanted. 
-  9. After a successful publish to Maven you can _Delete_ your release branch.
+  6. Push the commit to the `master-release` branch for tracking
+  7. Now that the `master-release` branch has all the latest updates from parent `master`, _Check out_ to a new branch on your local e.g. `opensrp-release1`
+  8. Merge in any other unmerged PR branches mentioned in the previous commit message and have not been merged to `master` yet
+  9. _Publish_ the specific modules that you wanted. See the [Publishing section below](#publishing)
+  10. After a successful publish to Maven you can _Delete_ your release branch.
 
 **Note:** Always remember to check out the _commits diff_ to tell which modules were affected by the latest changes. You can confirm that your module artifact was uploaded as it is available at https://oss.sonatype.org/content/repositories/snapshots/org/smartregister/
 
 
   #### Commits
   
-  Depending on the exact modules you updated in this commit for publising:
+  Each new commit message on the `master-release` branch should build upon the previous commit message. The format is as shown below, with the title listing all modules.
+  Copy over the whole message and remove any entries for PRs already merged into `master` and add any new ones.
+  
   ```
-   SDK Release: SDC, Engine, Workflow
+   SDK Release: Engine, SDC, Workflow, Contrib:Barcode, Common, Knowledger
    - With unmerged PR #1344 branch
    - With unmerged PR #1542 branch
   ```
-See [sample commit here](https://github.com/google/android-fhir/commit/10e46a0eac5f41b68b5bb1caa87069b83d36c6b1)
+See related [sample commit here](https://github.com/google/android-fhir/commit/10e46a0eac5f41b68b5bb1caa87069b83d36c6b1)
 
  **Note:** The above helps the next person doing a release to include exactly all the code updates that had been merged in previeously. If by the time we are publishing again the branch has already been merged into `master` branch then there'd be no need to add the message again. Also a glance at the header shows which specific modules were affected. Other than confirming the module changes that were incorporated after merging in `master`, check out which modules the unmerged PRs updated. The commit message is additive hence always use the previous commit message as a template for the new commit message (to either reduct or add the current required unmerged PRs).
 
@@ -85,3 +88,10 @@ See [sample commit here](https://github.com/google/android-fhir/commit/10e46a0ea
     override val name = "Android FHIR Structured Data Capture Library"
   }
   ```
+
+  ### Publishing
+
+  Once all the above is in place you just need to run the command: <br/>
+`./gradlew :datacapture:publishReleasePublicationToSonatypeRepository --stacktrace`. All the other modules follow a similar format, you only need to change the module you are targeting, e.g. to publish _engine_ use the command: <br/> `./gradlew :engine:publishReleasePublicationToSonatypeRepository --stacktrace`
+<br/><br/>
+Your artifact should now be available under the corresponding artifact group under your org. on Sonatype <br/> `https://oss.sonatype.org/content/repositories/snapshots/org/smartregister/data-capture/`
