--- a/docs/developer-setup/sentry.mdx
+++ b/docs/developer-setup/sentry.mdx
@@ -9,7 +9,7 @@
 ### Instructions
 
 1.  Once you have created the Sentry project as instructed above, inside the `local.properties` file add a line in the form
-    `SENTRY_DSN=xxxxxx` replace the `xxxxxx` with the `sentry dsn` from your project in sentry. This will be picked up 
+    `SENTRY_DSN=xxxxxx` replace the `xxxxxx` with the `sentry dsn` from your project in Sentry. This will be picked up 
     automatically by the setup inside the quest module's build.gradle file
 2.  If you want to seperate your staging and production environment logs and performance information you can add an environment variable 
     to the Sentry,init method. You will need to insert an extra option in the form of `options.environment = <Your Environment Name>`. When 
@@ -18,7 +18,7 @@
 
 3.  Timber logs should show up in the Sentry dashboard. Sentry will track crashes and timber Errors. You can also
     configure the log levels inside the Sentry.init function
-4.  By default we have configured additional sentry integrations for:
+4.  By default we have configured additional Sentry integrations for:
     - Navigation
     - Fragments
     
