--- a/docs/configurations/user-interface/register-config.mdx
+++ b/docs/configurations/user-interface/register-config.mdx
@@ -10,12 +10,62 @@ Registers are the entry point to FHIRCore application. Typically this is a list 
 For every register in the application there should at least be one profile configuration. Similar registers can re-use the same profile configuration.
 :::
 
+### Working with dynamic data queries
+Assume you would like to filter resource data based on a criteria that needs computation before application. e.g show patients who are under 5 years or over 18 below, then this is the config to use.
+Before you use this rule on a dataQuery, you need  to execute it first. The rules are executed within a `configRules` block which follows rules engine standard and default priority of 1 which can be change based on requirement.
+Below is a JSON config that shows how to execute rules.Refer to working with rules section.
+``` json
+{
+ "appId": "appId",
+  "configType": "register",
+  "id": "childRegister",
+  "configRules": [
+    {
+      "name": "under5",
+      "condition": "true",
+      "actions": [
+        "data.put('under5', dateService.addOrSubtractYearFromCurrentDate(5,'-'))"
+      ]
+    }
+  ]
+}
+```
+
+Below is a sample dataQuery config to filter register data by configRules
+
+``` json
+"fhirResource": {
+    "baseResource": {
+      "resource": "Patient",
+      "dataQueries": [
+        {
+          "paramName": "birthdate",
+          "filterCriteria": [
+            {
+              "dataType": "DATE",
+              "computedRule": "under5",
+              "prefix": "GREATERTHAN_OR_EQUALS"
+            }
+          ]
+        }
+      ]
+    }
+    }
+```
+
 ## Config properties
 
 |Property | Description | Required | Default |
 |--|--|:--:|:--:|
 appId | Unique identifier for the application | Yes | |
 configType | Type of configuration | Yes |  `register` |
+computedRules | A block that defines the rules to execute | no |  null |
+baseResource | base resource to load data from | Yes | |
+paramName | dataQuery unique identifier | Yes |   |
+filterCriteria | a list of logic to be executed | Yes | |
+filterCriteria: dataType | dataType of the filter param | Yes |   |
+filterCriteria: computedRule | key that will hold dynamic value after computation | No but recommended |  app defaults to using value/valueDate/valueDateTime |
+filterCriteria: prefix | criteria to use  | No | null  |
 
 
 ## Dynamic data pass between Registers and Profiles
