Change location, organisation, careteam and app-version url tags (#2404)
* Change location, organisation, careteam and app-version url tags

- Add path to the main domain to increase the uniqueness and allow for better searches

* Fix bug preventing saving of location IDs, careteam IDs and organisation IDs

Fixes #2401

* Fix double-tagging with app-version code

* Fix questionnaire open crash

* Update tag code system urls

* update tests for changes

* Update tag urls for practitioner, careteam, location and organisation coding

---------

Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>
Co-authored-by: Elly Kitoto <junkmailstoelly@gmail.com>
Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -104,5 +104,7 @@
     <string name="questionnaire_not_found">Questionnaire not found.  Sync all questionnaires to fix</string>
     <string name="no_visits">No visits</string>
     <string name="questionnaire_response_broken">Questionnaire response broken</string>
+    <string name="app_version_tag_url" translatable="false">https://smartregister.org/app-version</string>
+    <string name="application_version" translatable="false">Application Version</string>
 
 </resources>
