--- a/docs/configurations/questionnaire-config.mdx
+++ b/docs/configurations/questionnaire-config.mdx
@@ -59,14 +59,15 @@ actions(workflow) | Import to execute logic related to the questionnaire | yes |
   "questionnaire": {
             "id": "questionnaire-uuid",
             "title": "Record sick child",
-            "title": "@{patientId}"
+            "resourceIdentifier": "@{patientId}"
           }
 ```
 
 ## Questionnaire block Config properties
+| Property | Description | Required | Default |
 id   | Unique uuid that determines what questionnaire i.e form to launch | yes | |
-title| label text of the questionnaire | yes | |
-title| FHIR resource to pull/add or update | yes | |
+title | label text of the questionnaire | yes | |
+resourceIdentifier | FHIR resource to pull/add or update | yes | |
 
 
 The questionnaire id inside the questionnaire block
