Document LIST widget sort configuration
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/docs/configurations/user-interface/widget-config.mdx
+++ b/docs/configurations/user-interface/widget-config.mdx
@@ -94,7 +94,7 @@ id | Unique identifier for the resource | no but highly recommended | app defaul
 relatedResourceId | Unique identifier for the relatedResources | no but highly recommended | app defaults to using resourceType.Name|
 resourceType | The resource to to get/fetch data from e.g Task or Careplan | yes | |
 conditionalFhirPathExpression | FhirPathExpression to get to use when filtering the resource defined in resourceType section | no | app defaults to using relatedResources types and fhirPathexpression|
-
+sortConfig | Configuration used for sorting LIST widget resource | no | |
 
 
 ## Config properties of a list widget
