Fix Typo in Strings Key

--- a/android/quest/src/main/res/values-fr/strings.xml
+++ b/android/quest/src/main/res/values-fr/strings.xml
@@ -18,7 +18,7 @@
     <string name="anc_visit">Visite CPN</string>
     <string name="at_risk">À risque</string>
     <string name="no_tasks">Aucune tâche</string>
-    <string name="add_memeber">AJOUTER UN MEMBRE</string>
+    <string name="add_member">AJOUTER UN MEMBRE</string>
     <string name="what_to_do">Qu\'est-ce que tu veux faire?</string>
     <string name="view_profile">Voir le profil</string>
     <string name="family_details">Détails de famille</string>
