--- a/android/quest/src/main/res/values-sw/strings.xml
+++ b/android/quest/src/main/res/values-sw/strings.xml
@@ -17,7 +17,7 @@
     <string name="routine_visit">Tembeleo la kawaida</string>
     <string name="anc_visit">Tembeleo la ANC</string>
     <string name="at_risk">Hatarini</string>
-    <string name="add_memeber">ONGEZA MWANAKAYA</string>
+    <string name="add_member">ONGEZA MWANAKAYA</string>
     <string name="no_tasks">Hakuna jukumu</string>
     <string name="what_to_do">Unataka kufanya nini?</string>
     <string name="family_details">Maelezo ya familia</string>
