--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="anc_visit">ANC visit</string>
     <string name="at_risk">At risk</string>
     <string name="no_tasks">No tasks</string>
-    <string name="add_memeber">ADD MEMBER</string>
+    <string name="add_member">ADD MEMBER</string>
     <string name="what_to_do">What do you want to do?</string>
 
     <!--Overflow menu strings -->
