--- a/docs/configurations/questionnaire-config.mdx
+++ b/docs/configurations/questionnaire-config.mdx
@@ -140,7 +140,7 @@ generated then below are the configs to use
                        "eventResourceId": "carePlanToBeClosed",
                        "matchAll": false,
                        "conditionalFhirPathExpressions": [
-                         "Patient.active = true"
+                         "condition-to-check"
                        ]
                      }
                    ],
@@ -163,7 +163,7 @@ generated then below are the configs to use
                            "filterCriteria": [
                              {
                                "dataType": "REFERENCE",
-                               "value": "PlanDefinition/e994ab6f-30a5-4450-9a90-691c8199f379"
+                               "value": "PlanDefinition/planDefinition-uuid-used-to-generate-the-resources"
                              }
                            ]
                          },
