Fix table formatting

--- a/docs/configurations/event-management/resource-closure.mdx
+++ b/docs/configurations/event-management/resource-closure.mdx
@@ -114,8 +114,8 @@ eventResources | A list of resources to close(Type of ResourceConfig) |    yes
 eventResourceId | UniqueId of resource that the trigger conditions are applied to | yes | RESOURCE_CLOSURE is supported for now |
 conditionalFhirPathExpressions | criteria to ensure we only close the intended resources | yes |     |
 matchAll |  Determines whether all conditional fhirpath expressions should evaluate to true |  no   |          True     |
-         |  `True` - Close resources only when all fhirpath expressions evaluate to true  |     |               |
-         |  `False` - Close resources when one or more fhirpath expressions evaluate to true  |     |               |
+|        |  `True` - Close resources only when all fhirpath expressions evaluate to true  |     |               |
+|        |  `False` - Close resources when one or more fhirpath expressions evaluate to true  |     |               |
 
 ### Event Resource Properties
 |Property | Description | Required | Default |
