--- a/docs/configurations/event-management/resource-closure.mdx
+++ b/docs/configurations/event-management/resource-closure.mdx
@@ -131,7 +131,7 @@ relatedResources | Configs that represent how to fetch related resources e.g Tas
 |--|--|:--:|:--:|
 paramName | String representation of the resource field to search on | yes |  |
 operation | Logical SQL operation to perform i.e AND, OR | yes | AND |
-filterCriteria | Configs that represent the datatype and value for filtering data | yes | AND |
+filterCriteria | Configs that represent the datatype and value for filtering data | yes |  |
 
 
 
