--- a/android/engine/src/main/res/values-fr/strings.xml
+++ b/android/engine/src/main/res/values-fr/strings.xml
@@ -128,4 +128,8 @@
     <string name="error_loading_config_no_internet">Impossible de charger la configuration. S\'il vous plait, vérifiez votre connexion internet</string>
     <string name="error_loading_config_general">Erreur de connexion au serveur. Veuillez contacter l\'administrateur système</string>
     <string name="error_loading_config_http_error">Impossible de charger la configuration. Veuillez réessayer plus tard</string>
+    <string name="insights">Statistiques</string>
+    <string name="dismiss">Rejeter</string>
+    <string name="unsynced_resources">Non Synchronisé</string>
+    <string name="all_data_synced">Tout synchronisé</string>
 </resources>
