--- a/android/engine/src/main/res/values-sw/strings.xml
+++ b/android/engine/src/main/res/values-sw/strings.xml
@@ -128,4 +128,8 @@
     <string name="error_loading_config_no_internet">Haikuweza kupakia usanidi. Tafadhali angalia muunganisho wako wa intaneti</string>
     <string name="error_loading_config_general">Hitilafu katika kuunganisha kwenye seva. Tafadhali wasiliana na msimamizi wa mfumo</string>
     <string name="error_loading_config_http_error">Haikuweza kupakia usanidi. Tafadhali jaribu tena baadae</string>
+    <string name="insights">Takwimu</string>
+    <string name="dismiss">Ondoa</string>
+    <string name="unsynced_resources">Zilizobakia Kwa Simu</string>
+    <string name="all_data_synced">Zote zimesawazishwa</string>
 </resources>
